# rust-web

./: .gitignore  Cargo.toml  LICENSE
crates/app_state/: Cargo.toml
crates/app_state/src/: lib.rs
crates/core/code/: Cargo.toml
crates/core/code/src/: error.rs  error_msg.rs  lib.rs
crates/core/database/: Cargo.toml
crates/core/database/src/: lib.rs  pool.rs
crates/core/logger/: Cargo.toml
crates/core/logger/src/: config.rs  layer.rs  lib.rs  utils.rs
crates/core/logger/src/layer/: console.rs  console_bunyan.rs  file.rs
crates/core/logger/src/utils/: time.rs
crates/core/response/: Cargo.toml
crates/inject/: Cargo.toml
crates/inject/src/: lib.rs
crates/services/: Cargo.toml
crates/services/public/: Cargo.toml
crates/services/public/src/: lib.rs
crates/services/public/src/controller/: health.rs
crates/services/public/src/router/: health.rs
crates/services/src/: lib.rs
web/: Cargo.toml  config.yaml
web/src/: config.rs  main.rs  router.rs  server.rs
web/src/config/: environment.rs  server.rs
