[workspace]
resolver = "3"
members = [
    "web",
    "crates/core/database",
    "crates/core/code",
    "crates/core/logger",
    "crates/core/entity",
    "crates/inject",
    "crates/app_state",
    #    服务集
    "crates/services",
    "crates/services/auth"
]
[workspace.dependencies]
# 日志
log = "0.4"
tracing = "0.1"
tracing-futures = "0.2"
tracing-serde = "0.2"
tracing-appender = "0.2"
tracing-error = "0.2"
tracing-bunyan-formatter = "0.3"
tracing-subscriber = "0.3"
color-eyre = "0.6"

# 数据库
sea-orm = "1.1"
sea-orm-migration = "1.1"
sqlx = "0.8"

# WEB
actix-web = "4.11"
actix-http = "3.11"
actix-multipart = "0.7"
validator_derive = "0.19"
validator = "0.19"
actix-cors = "0.7"
actix-web-requestid = "2.1"
actix-request-identifier = "4.2"
tracing-actix-web = "0.7"
casbin = "2.10"
listenfd = "1.0"

# 序列化
serde = "1.0"
serde_repr = "0.1"
serde_urlencoded = "0.7"
serde_json = "1.0"
serde_yaml = "0.9"

# 工具
jsonwebtoken = "9.3"
chrono = "0.4"
rust_decimal = "1.37"
captcha-rs = "0.2"
sha2 = "0.10"
regex = "1.11"
uuid = "1.17"
time = "0.3"
rust-embed = "8.7"
tokio-cron-scheduler = "0.14"
uap-rust = "0.0"
futures-util = "0.3"
colored = "2.2"
moka = "0.12"
base64 = "0.22"

# 其他
futures = "0.3"
thiserror = "2.0"
async-trait = "0.1"
async-std = "1.13"
async-stream = "0.3"
tokio = "1.45"
once_cell = "1.21"
nject = "0.4"
dotenv = "0.15"
num_cpus = "1.17"
bytes = "1.10"
clap = "4.5"
